--- a/Hell Hotel No Depth/Packages/manifest.json
+++ b/Hell Hotel No Depth/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.daniel-geo.unityhackatime": "https://github.com/daniel-geo/unity-hackatime.git#package",
+    "com.h8man.2d.navmeshplus": "https://github.com/h8man/NavMeshPlus.git",
     "com.unity.2d.animation": "12.0.3",
     "com.unity.2d.aseprite": "2.0.2",
     "com.unity.2d.psdimporter": "11.0.2",
